[gd_scene load_steps=3 format=3 uid="uid://bk40qgcs1kxm2"]

[ext_resource type="Script" path="res://mobs/enemy_eye.gd" id="1_f8pvl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y15j3"]
radius = 3.0

[node name="enemy_eye" type="CharacterBody2D"]
script = ExtResource("1_f8pvl")

[node name="Area2D" type="Area2D" parent="." groups=["eye"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_y15j3")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
